# opennn

./: .gitignore  CMakeLists.txt  generate_vs_projects.bat  run_all_tests.bat  run_ci_locally_no_clean.bat  run_ci_tests.bat
examples/mnist/: main.cpp
opennn/: CMakeLists.txt  opennn_strings.cpp
tests/: CMakeLists.txt  main.cpp
